--- a/client/src/styles/add-post.css
+++ b/client/src/styles/add-post.css
@@ -77,3 +77,9 @@
   min-height: 400px;
   transition: all 0.3s;
 }
+@media (max-width: 900px) {
+  .addPost {
+    width: 94%;
+    margin-top: 0px;
+  }
+}
