--- a/client/src/styles/chat-room.css
+++ b/client/src/styles/chat-room.css
@@ -2,12 +2,37 @@
   display: flex;
   width: 100%;
   height: 100vh;
-  position: ;
 }
 .chatUserAvatar {
   width: 30px;
   height: 30px;
   border-radius: 5px;
+}
+.chatBoxWrapper {
+  width: 100%;
+  height: 80vh;
+  overflow: hidden;
+}
+.mobileLoggedHeader {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 60vh;
+}
+.chatBox {
+  height: 80vh;
+  width: 105%;
+  padding-top: 80px;
+  box-sizing: border-box;
+  color: #041725;
+  border: 1px solid black;
+  overflow: scroll;
+  background-color: #b1c5c6;
+  border: none;
+  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.5);
+  z-index: 3;
+  font-family: "montserrat";
+  font-weight: bold;
 }
 .chatUserList {
   width: 20%;
@@ -67,20 +92,7 @@
   display: flex;
   height: 20vh;
 }
-.chatBox {
-  height: 80vh;
-  width: 100%;
-  padding-top: 80px;
-  color: #041725;
-  border: 1px solid black;
-  overflow: scroll;
-  background-color: #b1c5c6;
-  border: none;
-  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.5);
-  z-index: 3;
-  font-family: "montserrat";
-  font-weight: bold;
-}
+
 .chatText {
   width: 80%;
   padding: 8px;
@@ -135,4 +147,23 @@
   box-sizing: border-box;
   max-width: 90%;
   word-wrap: break-word;
+}
+@media (max-width: 900px) {
+  .chatUserList {
+    display: none;
+  }
+  .chatRoom {
+    width: 80%;
+  }
+}
+@media (max-width: 600px) {
+  .chatUserList {
+    display: none;
+  }
+  .chatRoomList {
+    display: none;
+  }
+  .chatRoom {
+    width: 100%;
+  }
 }
