--- a/client/src/styles/simple-nav.css
+++ b/client/src/styles/simple-nav.css
@@ -17,6 +17,83 @@ a:visited {
   text-decoration: none;
   color: white;
 }
+.mobileNavBtn {
+  cursor: pointer;
+  color: #e5a930;
+  font-size: 40px;
+  margin-right: 20px;
+  margin-top: 20px;
+}
+.mobileNavBtnWrap {
+  display: none;
+  background-color: #041725;
+  width: 50%;
+  justify-content: flex-end;
+}
+.mobileLoggedHeader {
+  width: 0%;
+  overflow: hidden;
+  right: 0px;
+  position: fixed;
+  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.5);
+  min-height: 100vh;
+  background-color: black;
+  font-family: "ubuntu";
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.showMobileNav {
+  width: 80% !important;
+  transition: all 0.3s ease-out;
+}
+.hideMobileNav {
+  width: 0% !important;
+  transition: all 0.3s ease-out;
+}
+.mobileNavHeader {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 80px;
+  align-items: center;
+}
+
+.mobileNavBtnInside {
+  cursor: pointer;
+  color: #e5a930;
+  font-size: 40px;
+  margin-left: 20px;
+}
+.userInfoMobile {
+  display: flex;
+  width: 50%;
+
+  justify-content: flex-end;
+  color: #e5a930;
+  align-items: center;
+}
+.margin {
+  margin-right: 10px;
+}
+.mobileAvatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+}
+.mobileLoggedHeader > ul > li {
+  text-align: center;
+  list-style-type: none;
+  display: block;
+  padding: 0;
+  right: 0px;
+  list-style-position: inside;
+  font-size: 20px;
+  margin-top: 20px;
+  cursor: pointer;
+  color: white;
+  transition: all 0.2s ease-out;
+}
 ul > li {
   list-style-type: none;
   display: inline;
@@ -227,5 +304,15 @@ ul {
   font-family: "ubuntu";
   color: rgba(255, 255, 255, 0.7);
 }
-@media (max-width: 1000px) {
+
+@media (max-width: 900px) {
+  .mobileNavBtnWrap {
+    display: flex;
+  }
+  .l-nav-btn-stns {
+    display: none;
+  }
+  .nav-btn-stns {
+    display: none;
+  }
 }
