--- a/client/src/styles/view-profile.css
+++ b/client/src/styles/view-profile.css
@@ -158,3 +158,25 @@
     transform: scale3D(0, 0, 1);
   }
 }
+@media (max-width: 900px) {
+  .viewLetter {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .reposView {
+    flex-direction: column;
+    align-items: center;
+    margin-left: 0px;
+    width: 100%;
+  }
+  .repoWrapView {
+    width: 98%;
+    min-height: 200px;
+  }
+  .viewHeader {
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid #213746;
+  }
+}
