--- a/client/src/styles/forums.css
+++ b/client/src/styles/forums.css
@@ -81,7 +81,7 @@
   width: 100%;
   height: 60%;
   margin-top: 20px;
-  word-break: break-all;
+  word-wrap: break-word;
 }
 .postDate {
   height: 20%;
